# Script

./: CMakeLists.txt  README.md  main.cpp  midi-fwd-fast-alsa.cpp.  midi-fwd.cpp  midi-uart-fwd.cpp  midi_relay.cpp  miditest.py  rtmidi-git.tar  rtpmidid_24.12.2_armhf.deb  wiringpi.cpp  wiringpi_3.14_armhf.deb
files-transform/:  map4qmr.cpp  midi_forwarding.cpp  midi_forwarding.h  midi_transform.cpp  midi_transform.h  uart_utils.cpp  uart_utils.h
src/: map4qmr.cpp
ttymidi.ori/: ttymidi
